@@ -35,23 +35,43 @@
 
 package java.util.concurrent.atomic;
 
-import java.lang.invoke.MethodHandles;
-import java.lang.invoke.VarHandle;
 import java.util.function.IntBinaryOperator;
 import java.util.function.IntUnaryOperator;
 
 /**
  * An {@code int} array in which elements may be updated atomically.
- * See the {@link VarHandle} specification for descriptions of the
- * properties of atomic accesses.
+ * See the {@link java.util.concurrent.atomic} package
+ * specification for description of the properties of atomic
+ * variables.
  * @since 1.5
  * @author Doug Lea
  */
 public class AtomicIntegerArray implements java.io.Serializable {
     private static final long serialVersionUID = 2862133569453604235L;
-    private static final VarHandle AA
-        = MethodHandles.arrayElementVarHandle(int[].class);
+
+    private static final sun.misc.Unsafe U = sun.misc.Unsafe.getUnsafe();
+    private static final int ABASE;
+    private static final int ASHIFT;
     private final int[] array;
+
+    static {
+        ABASE = U.arrayBaseOffset(int[].class);
+        int scale = U.arrayIndexScale(int[].class);
+        if ((scale & (scale - 1)) != 0)
+            throw new Error("array index scale not a power of two");
+        ASHIFT = 31 - Integer.numberOfLeadingZeros(scale);
+    }
+
+    private long checkedByteOffset(int i) {
+        if (i < 0 || i >= array.length)
+            throw new IndexOutOfBoundsException("index " + i);
+
+        return byteOffset(i);
+    }
+
+    private static long byteOffset(int i) {
+        return ((long) i << ASHIFT) + ABASE;
+    }
 
     /**
      * Creates a new AtomicIntegerArray of the given length, with all
@@ -85,187 +105,154 @@ public class AtomicIntegerArray implements java.io.Serializable {
     }
 
     /**
-     * Returns the current value of the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getVolatile}.
+     * Gets the current value at position {@code i}.
      *
      * @param i the index
      * @return the current value
      */
     public final int get(int i) {
-        return (int)AA.getVolatile(array, i);
+        return getRaw(checkedByteOffset(i));
+    }
+
+    private int getRaw(long offset) {
+        return U.getIntVolatile(array, offset);
     }
 
     /**
-     * Sets the element at index {@code i} to {@code newValue},
-     * with memory effects as specified by {@link VarHandle#setVolatile}.
+     * Sets the element at position {@code i} to the given value.
      *
      * @param i the index
      * @param newValue the new value
      */
     public final void set(int i, int newValue) {
-        AA.setVolatile(array, i, newValue);
+        U.putIntVolatile(array, checkedByteOffset(i), newValue);
     }
 
     /**
-     * Sets the element at index {@code i} to {@code newValue},
-     * with memory effects as specified by {@link VarHandle#setRelease}.
+     * Eventually sets the element at position {@code i} to the given value.
      *
      * @param i the index
      * @param newValue the new value
      * @since 1.6
      */
     public final void lazySet(int i, int newValue) {
-        AA.setRelease(array, i, newValue);
+        U.putOrderedInt(array, checkedByteOffset(i), newValue);
     }
 
     /**
-     * Atomically sets the element at index {@code i} to {@code
-     * newValue} and returns the old value,
-     * with memory effects as specified by {@link VarHandle#getAndSet}.
+     * Atomically sets the element at position {@code i} to the given
+     * value and returns the old value.
      *
      * @param i the index
      * @param newValue the new value
      * @return the previous value
      */
     public final int getAndSet(int i, int newValue) {
-        return (int)AA.getAndSet(array, i, newValue);
+        return U.getAndSetInt(array, checkedByteOffset(i), newValue);
     }
 
     /**
-     * Atomically sets the element at index {@code i} to {@code
-     * newValue} if the element's current value {@code == expectedValue},
-     * with memory effects as specified by {@link VarHandle#compareAndSet}.
+     * Atomically sets the element at position {@code i} to the given
+     * updated value if the current value {@code ==} the expected value.
      *
      * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
+     * @param expect the expected value
+     * @param update the new value
      * @return {@code true} if successful. False return indicates that
      * the actual value was not equal to the expected value.
      */
-    public final boolean compareAndSet(int i, int expectedValue, int newValue) {
-        return AA.compareAndSet(array, i, expectedValue, newValue);
+    public final boolean compareAndSet(int i, int expect, int update) {
+        return compareAndSetRaw(checkedByteOffset(i), expect, update);
+    }
+
+    private boolean compareAndSetRaw(long offset, int expect, int update) {
+        return U.compareAndSwapInt(array, offset, expect, update);
     }
 
     /**
-     * Possibly atomically sets the element at index {@code i} to
-     * {@code newValue} if the element's current value {@code == expectedValue},
-     * with memory effects as specified by {@link VarHandle#weakCompareAndSetPlain}.
+     * Atomically sets the element at position {@code i} to the given
+     * updated value if the current value {@code ==} the expected value.
      *
-     * @deprecated This method has plain memory effects but the method
-     * name implies volatile memory effects (see methods such as
-     * {@link #compareAndExchange} and {@link #compareAndSet}).  To avoid
-     * confusion over plain or volatile memory effects it is recommended that
-     * the method {@link #weakCompareAndSetPlain} be used instead.
+     * <p><a href="package-summary.html#weakCompareAndSet">May fail
+     * spuriously and does not provide ordering guarantees</a>, so is
+     * only rarely an appropriate alternative to {@code compareAndSet}.
      *
      * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
+     * @param expect the expected value
+     * @param update the new value
      * @return {@code true} if successful
-     * @see #weakCompareAndSetPlain
      */
-    @Deprecated(since="9")
-    public final boolean weakCompareAndSet(int i, int expectedValue, int newValue) {
-        return AA.weakCompareAndSetPlain(array, i, expectedValue, newValue);
+    public final boolean weakCompareAndSet(int i, int expect, int update) {
+        return compareAndSet(i, expect, update);
     }
 
     /**
-     * Possibly atomically sets the element at index {@code i} to
-     * {@code newValue} if the element's current value {@code == expectedValue},
-     * with memory effects as specified by {@link VarHandle#weakCompareAndSetPlain}.
-     *
-     * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
-     * @return {@code true} if successful
-     * @since 9
-     */
-    public final boolean weakCompareAndSetPlain(int i, int expectedValue, int newValue) {
-        return AA.weakCompareAndSetPlain(array, i, expectedValue, newValue);
-    }
-
-    /**
-     * Atomically increments the value of the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getAndAdd}.
-     *
-     * <p>Equivalent to {@code getAndAdd(i, 1)}.
+     * Atomically increments by one the element at index {@code i}.
      *
      * @param i the index
      * @return the previous value
      */
     public final int getAndIncrement(int i) {
-        return (int)AA.getAndAdd(array, i, 1);
+        return getAndAdd(i, 1);
     }
 
     /**
-     * Atomically decrements the value of the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getAndAdd}.
-     *
-     * <p>Equivalent to {@code getAndAdd(i, -1)}.
+     * Atomically decrements by one the element at index {@code i}.
      *
      * @param i the index
      * @return the previous value
      */
     public final int getAndDecrement(int i) {
-        return (int)AA.getAndAdd(array, i, -1);
+        return getAndAdd(i, -1);
     }
 
     /**
-     * Atomically adds the given value to the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getAndAdd}.
+     * Atomically adds the given value to the element at index {@code i}.
      *
      * @param i the index
      * @param delta the value to add
      * @return the previous value
      */
     public final int getAndAdd(int i, int delta) {
-        return (int)AA.getAndAdd(array, i, delta);
+        return U.getAndAddInt(array, checkedByteOffset(i), delta);
     }
 
     /**
-     * Atomically increments the value of the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getAndAdd}.
-     *
-     * <p>Equivalent to {@code addAndGet(i, 1)}.
+     * Atomically increments by one the element at index {@code i}.
      *
      * @param i the index
      * @return the updated value
      */
     public final int incrementAndGet(int i) {
-        return (int)AA.getAndAdd(array, i, 1) + 1;
+        return getAndAdd(i, 1) + 1;
     }
 
     /**
-     * Atomically decrements the value of the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getAndAdd}.
-     *
-     * <p>Equivalent to {@code addAndGet(i, -1)}.
+     * Atomically decrements by one the element at index {@code i}.
      *
      * @param i the index
      * @return the updated value
      */
     public final int decrementAndGet(int i) {
-        return (int)AA.getAndAdd(array, i, -1) - 1;
+        return getAndAdd(i, -1) - 1;
     }
 
     /**
-     * Atomically adds the given value to the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getAndAdd}.
+     * Atomically adds the given value to the element at index {@code i}.
      *
      * @param i the index
      * @param delta the value to add
      * @return the updated value
      */
     public final int addAndGet(int i, int delta) {
-        return (int)AA.getAndAdd(array, i, delta) + delta;
+        return getAndAdd(i, delta) + delta;
     }
 
     /**
-     * Atomically updates (with memory effects as specified by {@link
-     * VarHandle#compareAndSet}) the element at index {@code i} with
-     * the results of applying the given function, returning the
-     * previous value. The function should be side-effect-free, since
-     * it may be re-applied when attempted updates fail due to
-     * contention among threads.
+     * Atomically updates the element at index {@code i} with the results
+     * of applying the given function, returning the previous value. The
+     * function should be side-effect-free, since it may be re-applied
+     * when attempted updates fail due to contention among threads.
      *
      * @param i the index
      * @param updateFunction a side-effect-free function
@@ -273,23 +260,20 @@ public class AtomicIntegerArray implements java.io.Serializable {
      * @since 1.8
      */
     public final int getAndUpdate(int i, IntUnaryOperator updateFunction) {
-        int prev = get(i), next = 0;
-        for (boolean haveNext = false;;) {
-            if (!haveNext)
-                next = updateFunction.applyAsInt(prev);
-            if (weakCompareAndSetVolatile(i, prev, next))
-                return prev;
-            haveNext = (prev == (prev = get(i)));
-        }
+        long offset = checkedByteOffset(i);
+        int prev, next;
+        do {
+            prev = getRaw(offset);
+            next = updateFunction.applyAsInt(prev);
+        } while (!compareAndSetRaw(offset, prev, next));
+        return prev;
     }
 
     /**
-     * Atomically updates (with memory effects as specified by {@link
-     * VarHandle#compareAndSet}) the element at index {@code i} with
-     * the results of applying the given function, returning the
-     * updated value. The function should be side-effect-free, since it
-     * may be re-applied when attempted updates fail due to contention
-     * among threads.
+     * Atomically updates the element at index {@code i} with the results
+     * of applying the given function, returning the updated value. The
+     * function should be side-effect-free, since it may be re-applied
+     * when attempted updates fail due to contention among threads.
      *
      * @param i the index
      * @param updateFunction a side-effect-free function
@@ -297,26 +281,23 @@ public class AtomicIntegerArray implements java.io.Serializable {
      * @since 1.8
      */
     public final int updateAndGet(int i, IntUnaryOperator updateFunction) {
-        int prev = get(i), next = 0;
-        for (boolean haveNext = false;;) {
-            if (!haveNext)
-                next = updateFunction.applyAsInt(prev);
-            if (weakCompareAndSetVolatile(i, prev, next))
-                return next;
-            haveNext = (prev == (prev = get(i)));
-        }
+        long offset = checkedByteOffset(i);
+        int prev, next;
+        do {
+            prev = getRaw(offset);
+            next = updateFunction.applyAsInt(prev);
+        } while (!compareAndSetRaw(offset, prev, next));
+        return next;
     }
 
     /**
-     * Atomically updates (with memory effects as specified by {@link
-     * VarHandle#compareAndSet}) the element at index {@code i} with
-     * the results of applying the given function to the current and
+     * Atomically updates the element at index {@code i} with the
+     * results of applying the given function to the current and
      * given values, returning the previous value. The function should
      * be side-effect-free, since it may be re-applied when attempted
      * updates fail due to contention among threads.  The function is
-     * applied with the current value of the element at index {@code i}
-     * as its first argument, and the given update as the second
-     * argument.
+     * applied with the current value at index {@code i} as its first
+     * argument, and the given update as the second argument.
      *
      * @param i the index
      * @param x the update value
@@ -326,26 +307,23 @@ public class AtomicIntegerArray implements java.io.Serializable {
      */
     public final int getAndAccumulate(int i, int x,
                                       IntBinaryOperator accumulatorFunction) {
-        int prev = get(i), next = 0;
-        for (boolean haveNext = false;;) {
-            if (!haveNext)
-                next = accumulatorFunction.applyAsInt(prev, x);
-            if (weakCompareAndSetVolatile(i, prev, next))
-                return prev;
-            haveNext = (prev == (prev = get(i)));
-        }
+        long offset = checkedByteOffset(i);
+        int prev, next;
+        do {
+            prev = getRaw(offset);
+            next = accumulatorFunction.applyAsInt(prev, x);
+        } while (!compareAndSetRaw(offset, prev, next));
+        return prev;
     }
 
     /**
-     * Atomically updates (with memory effects as specified by {@link
-     * VarHandle#compareAndSet}) the element at index {@code i} with
-     * the results of applying the given function to the current and
+     * Atomically updates the element at index {@code i} with the
+     * results of applying the given function to the current and
      * given values, returning the updated value. The function should
      * be side-effect-free, since it may be re-applied when attempted
      * updates fail due to contention among threads.  The function is
-     * applied with the current value of the element at index {@code i}
-     * as its first argument, and the given update as the second
-     * argument.
+     * applied with the current value at index {@code i} as its first
+     * argument, and the given update as the second argument.
      *
      * @param i the index
      * @param x the update value
@@ -355,14 +333,13 @@ public class AtomicIntegerArray implements java.io.Serializable {
      */
     public final int accumulateAndGet(int i, int x,
                                       IntBinaryOperator accumulatorFunction) {
-        int prev = get(i), next = 0;
-        for (boolean haveNext = false;;) {
-            if (!haveNext)
-                next = accumulatorFunction.applyAsInt(prev, x);
-            if (weakCompareAndSetVolatile(i, prev, next))
-                return next;
-            haveNext = (prev == (prev = get(i)));
-        }
+        long offset = checkedByteOffset(i);
+        int prev, next;
+        do {
+            prev = getRaw(offset);
+            next = accumulatorFunction.applyAsInt(prev, x);
+        } while (!compareAndSetRaw(offset, prev, next));
+        return next;
     }
 
     /**
@@ -377,190 +354,11 @@ public class AtomicIntegerArray implements java.io.Serializable {
         StringBuilder b = new StringBuilder();
         b.append('[');
         for (int i = 0; ; i++) {
-            b.append(get(i));
+            b.append(getRaw(byteOffset(i)));
             if (i == iMax)
                 return b.append(']').toString();
             b.append(',').append(' ');
         }
     }
-
-    // jdk9
-
-    /**
-     * Returns the current value of the element at index {@code i},
-     * with memory semantics of reading as if the variable was declared
-     * non-{@code volatile}.
-     *
-     * @param i the index
-     * @return the value
-     * @since 9
-     */
-    public final int getPlain(int i) {
-        return (int)AA.get(array, i);
-    }
-
-    /**
-     * Sets the element at index {@code i} to {@code newValue},
-     * with memory semantics of setting as if the variable was
-     * declared non-{@code volatile} and non-{@code final}.
-     *
-     * @param i the index
-     * @param newValue the new value
-     * @since 9
-     */
-    public final void setPlain(int i, int newValue) {
-        AA.set(array, i, newValue);
-    }
-
-    /**
-     * Returns the current value of the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getOpaque}.
-     *
-     * @param i the index
-     * @return the value
-     * @since 9
-     */
-    public final int getOpaque(int i) {
-        return (int)AA.getOpaque(array, i);
-    }
-
-    /**
-     * Sets the element at index {@code i} to {@code newValue},
-     * with memory effects as specified by {@link VarHandle#setOpaque}.
-     *
-     * @param i the index
-     * @param newValue the new value
-     * @since 9
-     */
-    public final void setOpaque(int i, int newValue) {
-        AA.setOpaque(array, i, newValue);
-    }
-
-    /**
-     * Returns the current value of the element at index {@code i},
-     * with memory effects as specified by {@link VarHandle#getAcquire}.
-     *
-     * @param i the index
-     * @return the value
-     * @since 9
-     */
-    public final int getAcquire(int i) {
-        return (int)AA.getAcquire(array, i);
-    }
-
-    /**
-     * Sets the element at index {@code i} to {@code newValue},
-     * with memory effects as specified by {@link VarHandle#setRelease}.
-     *
-     * @param i the index
-     * @param newValue the new value
-     * @since 9
-     */
-    public final void setRelease(int i, int newValue) {
-        AA.setRelease(array, i, newValue);
-    }
-
-    /**
-     * Atomically sets the element at index {@code i} to {@code newValue}
-     * if the element's current value, referred to as the <em>witness
-     * value</em>, {@code == expectedValue},
-     * with memory effects as specified by
-     * {@link VarHandle#compareAndExchange}.
-     *
-     * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
-     * @return the witness value, which will be the same as the
-     * expected value if successful
-     * @since 9
-     */
-    public final int compareAndExchange(int i, int expectedValue, int newValue) {
-        return (int)AA.compareAndExchange(array, i, expectedValue, newValue);
-    }
-
-    /**
-     * Atomically sets the element at index {@code i} to {@code newValue}
-     * if the element's current value, referred to as the <em>witness
-     * value</em>, {@code == expectedValue},
-     * with memory effects as specified by
-     * {@link VarHandle#compareAndExchangeAcquire}.
-     *
-     * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
-     * @return the witness value, which will be the same as the
-     * expected value if successful
-     * @since 9
-     */
-    public final int compareAndExchangeAcquire(int i, int expectedValue, int newValue) {
-        return (int)AA.compareAndExchangeAcquire(array, i, expectedValue, newValue);
-    }
-
-    /**
-     * Atomically sets the element at index {@code i} to {@code newValue}
-     * if the element's current value, referred to as the <em>witness
-     * value</em>, {@code == expectedValue},
-     * with memory effects as specified by
-     * {@link VarHandle#compareAndExchangeRelease}.
-     *
-     * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
-     * @return the witness value, which will be the same as the
-     * expected value if successful
-     * @since 9
-     */
-    public final int compareAndExchangeRelease(int i, int expectedValue, int newValue) {
-        return (int)AA.compareAndExchangeRelease(array, i, expectedValue, newValue);
-    }
-
-    /**
-     * Possibly atomically sets the element at index {@code i} to
-     * {@code newValue} if the element's current value {@code == expectedValue},
-     * with memory effects as specified by
-     * {@link VarHandle#weakCompareAndSet}.
-     *
-     * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
-     * @return {@code true} if successful
-     * @since 9
-     */
-    public final boolean weakCompareAndSetVolatile(int i, int expectedValue, int newValue) {
-        return AA.weakCompareAndSet(array, i, expectedValue, newValue);
-    }
-
-    /**
-     * Possibly atomically sets the element at index {@code i} to
-     * {@code newValue} if the element's current value {@code == expectedValue},
-     * with memory effects as specified by
-     * {@link VarHandle#weakCompareAndSetAcquire}.
-     *
-     * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
-     * @return {@code true} if successful
-     * @since 9
-     */
-    public final boolean weakCompareAndSetAcquire(int i, int expectedValue, int newValue) {
-        return AA.weakCompareAndSetAcquire(array, i, expectedValue, newValue);
-    }
-
-    /**
-     * Possibly atomically sets the element at index {@code i} to
-     * {@code newValue} if the element's current value {@code == expectedValue},
-     * with memory effects as specified by
-     * {@link VarHandle#weakCompareAndSetRelease}.
-     *
-     * @param i the index
-     * @param expectedValue the expected value
-     * @param newValue the new value
-     * @return {@code true} if successful
-     * @since 9
-     */
-    public final boolean weakCompareAndSetRelease(int i, int expectedValue, int newValue) {
-        return AA.weakCompareAndSetRelease(array, i, expectedValue, newValue);
-    }
-
 
 }
